k8s/infra/controllers/longhorn/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https-gateway
  hostnames:
  - longhorn.lab.schaermu.ch
  rules:
  - backendRefs:
    - name: longhorn-frontend
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
